acabado funciones tags en post, added en swagger
